fixed improper cursor resizing on mobile

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a.reference h3:hover {opacity:0.5;}
 }
 
 .dragme{
-	position: fixed;
+	position: absolute;
 	cursor: move;
 	z-index:1200;
 	max-width: 100%;
